top section rough draft done

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         </nav>
     </header>
     <section class="top">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
-        <h1>Luis  Bryan Dominguez</h1>
-        <h6>Soulful Coder</h6>
-        <p> I live by the idea that everything and everyone is connected and thus I strive to write meaningful code sourced from the heart.</p>
-       <button class="projects" onclick="window.location.href='/projects.html';">My projects</button>
+        <div class="bg-image">
+            <h1>Luis  Bryan Dominguez</h1>
+            <h6>Soulful Coder</h6>
+            <p> I live by the idea that everything and everyone is connected and thus I strive to write meaningful code sourced from the heart.</p>
+             <button class="projects" onclick="window.location.href='/projects.html';">My projects</button>
+        </div>     
     </section> 
     <section class="content">
         <img src="https://picsum.photos/200" alt="placeholder random image">
