content/projects section css rough draft done

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
         </div>     
     </section> 
     <section class="content">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
-        <img src="https://picsum.photos/200" alt="placeholder random image">
+        <div class="top-row">
+            <img src="https://picsum.photos/200" alt="placeholder random image">
+            <img src="https://picsum.photos/200" alt="placeholder random image">
+            <img src="https://picsum.photos/200" alt="placeholder random image">
+        </div>
+        <div class="bottom-row">
+            <img src="https://picsum.photos/200" alt="placeholder random image">
+            <img src="https://picsum.photos/200" alt="placeholder random image">
+            <img src="https://picsum.photos/200" alt="placeholder random image">
+        </div>
     </section>
     <footer>
         <button class="contact-me" onclick="window.location.href='/contact.html'">Contact Me</button>
