some final clean up all around on first whole page rough draft -done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <h1>Luis  Bryan Dominguez</h1>
             <h6>Soulful Coder</h6>
             <p> I live by the idea that everything and everyone is connected and thus I strive to write meaningful code sourced from the heart.</p>
-             <button class="projects" onclick="window.location.href='/projects.html';">My projects</button>
+             <div class="projects">My projects</div>
+             <!-- onclick="window.location.href='/projects.html';-->
         </div>     
     </section> 
     <section class="content">
@@ -38,7 +39,7 @@
         </div>
     </section>
     <footer>
-        <button class="contact-me" onclick="window.location.href='/contact.html'">Contact Me</button>
+        <div class="contact-me">Contact Me</div> <!-- on click to Contact me page-->
     </footer> 
 </body>
 </html>
